# reaper

./: .pmat-gates.toml  ARCHITECTURE.md  BLOCKED.md  CONTRIBUTING.md  Cargo.toml  DEBUGGING.md  END_OF_DAY_SUMMARY.md  FINAL_STATUS.md  GITHUB_ISSUES_FILED.md  Makefile  PATHOLOGICAL_DETECTOR_DEMO.md  PROJECT_STATUS.md  PUBLICATION_SUCCESS.md  QUALITY.md  README.md  REAPER-701_VALIDATION.md  REAPER-703_BLOCKED.md  RUCHY_COMPLETION_STATUS.md  RUCHY_TOOLS_VALIDATION.md  RUCHY_TOOLS_VALIDATION_v3.161.0.md  RUCHY_v3.169.0_NEW_TOOLS.md  RUCHY_v3.170.0_PUBLISH_TEST.md  Ruchy.toml  SPRINT7_STATUS.md  SPRINT8_COMPLETE.md  STACK_PROFILER_DEMO.md  STATUS.md  UNBLOCKED.md  build.rs  pmat.toml  roadmap-v3.155.yaml  roadmap.yaml
.claude/: CLAUDE.md
.pmat/: baseline.json
docs/: main.md
mutants.out/: lock.json
reference/: README.md  cli.ruchy  config.ruchy  detector.ruchy  logger.ruchy  scanner.ruchy  terminator.ruchy
src/: cli.rs  config.rs  detector.rs  logger.rs  main.rs  main.ruchy
