[package]
build = "build.rs"
name = "ruchy-reaper"
version = "1.0.0"
edition = "2021"
authors = ["Noah Gift <noah.gift@gmail.com>"]
description = "Rogue process detection and termination tool - Pure Ruchy showcase CLI with 100% test coverage"
license = "MIT"
repository = "https://github.com/paiml/reaper"
keywords = ["cli", "process", "monitoring", "ruchy", "tdd"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[dependencies]

[build-dependencies]
ruchy = "3.170.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
